--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<script src="./js/jquery-2.1.1.min.js"></script>
 	<script src="./js/bootstrap-3.3.6.min.js"></script>
+	<script src="./js/data.js"></script>
 	<script src="./js/app.js"></script>
 
 </body>
